--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   font-family: Ribeye;
 }
 body {
-  background-image: url("/img/Sports.jpg");
+  background-image: url("img/Sports.jpg");
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
